--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -9,6 +9,30 @@
     <img src="../images/brownies.webp " alt = "brownie picture">
     <h1> Description</h1>
     <p> These brownies with chocolate chips are the best brownies I've ever had!</p>
-    
+    <h1> Ingredients </h1>
+    <ul>
+        <li> 1/2 cup white sugar </li>
+        <li> 2 tablespoons butter </li>
+        <li> 2 tablespoons water</li>
+        <li> 1 1/2 cups semisweet chocolate chips </li>
+        <li> 2 large eggs, beaten </li>
+        <li> 1/2 teaspoon vanilla extract </li>
+        <li> 2/3 cup all-purpose flour </li>
+        <li> 1/2 teaspoon salt </li>
+        <li> 1/4 teaspoon baking soda </li>       
+    </ul>
+
+    <h1> Steps </h1>
+    <ol>
+        <li> Preheat the oven to 325 degrees F (165 degrees C). 
+             Grease an 8-inch square pan.</li>
+        <li> Combine sugar, butter, and water in a medium saucepan; 
+            cook and stir over medium heat until boiling. 
+            Remove from heat and stir in chocolate chips until melted and smooth; mix in eggs and vanilla. 
+            Combine flour, salt, and baking soda; stir into the chocolate mixture. 
+            Spread brownie batter evenly into the prepared pan.</li>
+        <li> Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan, about 20 to 30 minutes. 
+            Let cool completely before cutting into squares.</li>
+    </ol>
 </body>
 </html>
