--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
 <body>
 <h1> Odin Recipes </h1>
-<a href="./recipes/lasagna.html"> Lasagna Recipe</a>
-<a href="./recipes/brownies.html"> Brownie Recipe</a>
-<a href="./recipes/cookies.html"> Cookie Recipe </a>
+
+<ul>
+ <li><a href="./recipes/lasagna.html"> Lasagna Recipe</a></li> 
+ <li><a href="./recipes/brownies.html"> Brownie Recipe</a></li> 
+ <li><a href="./recipes/cookies.html"> Cookie Recipe </a></li> 
+</ul>
 </body>
 
 
